# cosim-cpp-example

./: .gitignore  BUILD  CMakeLists copy 2.txt  CMakeLists copy.txt  CMakeLists.txt  Makefile  README.md  main.cpp  main2.cpp
include/google/api/: auth.pb.cc  backend.pb.h  billing.pb.cc  client.pb.cc  client.pb.h  config_change.pb.cc  context.pb.cc  control.pb.cc  error_reason.pb.h  httpbody.pb.cc  label.pb.cc  logging.pb.cc  metric.pb.cc  quota.pb.cc  resource.pb.cc  routing.pb.cc  service.pb.cc
include/google/api/apikeys/v2/: apikeys.pb.cc  apikeys.pb.h  resources.pb.cc
include/google/api/expr/conformance/v1alpha1/: conformance_service.pb.h
include/google/api/expr/v1alpha1/: eval.pb.cc  explain.pb.h  syntax.pb.cc  syntax.pb.h  value.pb.cc  value.pb.h
include/google/api/expr/v1beta1/: decl.pb.cc  decl.pb.h  eval.pb.cc  expr.pb.cc  source.pb.cc  source.pb.h  value.pb.h
include/google/api/servicecontrol/v1/: distribution.pb.cc  log_entry.pb.h  metric_value.pb.cc  metric_value.pb.h  quota_controller.pb.cc  quota_controller.pb.h  service_controller.pb.h
include/google/api/servicecontrol/v2/: service_controller.pb.cc
include/google/api/servicemanagement/v1/: servicemanager.pb.cc
include/google/api/serviceusage/v1/: resources.pb.cc  serviceusage.pb.h
include/google/api/serviceusage/v1beta1/: serviceusage.pb.h
include/risenlighten/lasvsim/simulation_task_kratos/api/simulation/v2/: hdmap.grpc.pb.cc  hdmap.grpc.pb.h  hdmap.pb.h  simulation.grpc.pb.cc  simulation.grpc.pb.h  simulation.pb.cc  simulation.pb.h
protos/risenlighten/lasvsim/process_task/api/cosim/v1/: hdmap.proto  simulation.proto
protos/risenlighten/lasvsim/simulation_task_kratos/api/simulation/v2/: hdmap.proto  simulation.proto
